# typescript_fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  dev.bat
dev/backend/: app.py  pyproject.toml
dev/fastapi/: pyproject.toml
dev/fastapi/src/fastapi/: __init__.py
dev/typescript/: .prettierrc.json  electron-builder.config.json  eslint.config.mjs  package-lock.json  package.json
dev/typescript/electron/: main.js
dev/typescript/src/: App.tsx
dev/typescript/src/api/: test.ts
