[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yukihito", email = "ok220020@oks.iput.ac.jp" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
