[project]
name = "fastapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yukihito", email = "ok220020@oks.iput.ac.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi"]
